[package]
name = "rust-libretro"
version = "0.2.3"
edition = "2021"
authors = [ "Maximilian Mader" ]
description = "libretro API abstractions"
keywords = [ "libretro", "RetroArch", "emulator", "game" ]
categories = [ "api-bindings", "emulators", "game-development", "gui" ]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/rust-libretro/"
homepage = "https://github.com/max-m/rust-libretro/"
repository = "https://github.com/max-m/rust-libretro/"

[package.metadata.docs.rs]
features = [ "log", "unstable-env-commands", "vulkan" ]
# Make documentation of, for example, our private CoreWrapper available
rustdoc-args = [ "--document-private-items" ]

[features]
unstable-env-commands = []
vulkan = ["rust-libretro-sys/vulkan"]

[dependencies]
rust-libretro-sys = { version = "0.2.3", path = "../rust-libretro-sys" }
rust-libretro-proc = { version = "0.2.3", path = "rust-libretro-proc" }

cfg-if = "1.0.0"
bitflags = "1.3.2"
log = { version = "0.4.17", features = [ "std" ], optional = true }
once_cell = "1.17.0"
const-str = "0.5.3"

[dev-dependencies]
libc = "0.2.139"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_debug"] }
image = "0.24.5"
bytemuck = "1.12.3"
byterepr = "0.1.0"
num-traits = "0.2.15"
paste = "1.0.11"
num = "0.4.0"
dasp_signal = "0.11.0"
dasp_sample = "0.11.0"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
vk-shader-macros = "0.2.8"

[[example]]
name = "input"
path = "examples/input/lib.rs"
crate-type = ["cdylib"]
required-features = ["unstable-env-commands", "log"]

[[example]]
name = "test"
path = "examples/test/lib.rs"
crate-type = ["cdylib"]
required-features = ["unstable-env-commands", "log"]

[[example]]
name = "test-advanced"
path = "examples/test-advanced/lib.rs"
crate-type = ["cdylib"]
required-features = ["unstable-env-commands", "log"]

[[example]]
name = "vulkan"
path = "examples/vulkan/lib.rs"
crate-type = ["cdylib"]
required-features = ["unstable-env-commands", "log", "vulkan"]
