[package]
name = "rust-libretro-sys-proc"
version = "0.2.2"
edition = "2021"
authors = [ "Maximilian Mader" ]
description = "Procedural macros for rust-libretro-sys"
keywords = [ "libretro", "RetroArch", "emulator", "game" ]
categories = [ "emulators", "game-development", "gui" ]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/rust-libretro-proc-sys/"
homepage = "https://github.com/max-m/rust-libretro/"
repository = "https://github.com/max-m/rust-libretro/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = [ "extra-traits", "full", "parsing" ] }
