[package]
name = "rust-libretro-proc"
version = "0.3.2"
edition = "2021"
authors = [ "Maximilian Mader" ]
description = "Procedural macros for rust-libretro"
keywords = [ "libretro", "RetroArch", "emulator", "game" ]
categories = [ "emulators", "game-development", "gui" ]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/rust-libretro-proc/"
homepage = "https://github.com/max-m/rust-libretro/"
repository = "https://github.com/max-m/rust-libretro/"

[lib]
proc-macro = true

[dependencies]
rust-libretro-sys = { version = "0.3.1", path = "../../rust-libretro-sys" }

proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.107", features = [ "extra-traits", "full", "parsing" ] }
